--- a/src/styles.css
+++ b/src/styles.css
@@ -483,7 +483,7 @@ blockquote > p {
     font-size: 13px;
     color: #939393;
     letter-spacing: 1px;
-    font-family: Octarine-Light-Oblique;
+    font-family: Octarine-Light-Oblique !important;
 }
 
 .sidebar-post-list-header {
