--- a/src/styles.css
+++ b/src/styles.css
@@ -410,13 +410,15 @@ blockquote > p {
     align-items: center;
     text-transform: uppercase;
     font-size: 12px;
+    font-weight: 700;
     color: #7a7a7a;
+    background-color: #fafafa;
     letter-spacing: 1px;
     margin: 0 0 0 0.5rem;
     padding: 3px 8px 0 4px;
     border: 1px solid #ababab;
-    border-right-width: 2px;
-    border-radius: 4px;
+    border-right-width: 3px;
+    border-radius: 5px;
 }
 
 .blog-post-social-button:hover {
