--- a/src/styles.css
+++ b/src/styles.css
@@ -194,25 +194,27 @@ hr {
 .nav-logo-text {
     color: white;
     font-family: Octarine-Bold;
-    font-size: 30px;
-    letter-spacing: 1.5px;
+    font-size: 34px;
+    letter-spacing: 4px;
+    padding-bottom: 4px;
 }
 
 .before-dot-news {
-    text-shadow: 2px 2px 0px #939393, 4px 4px 0px #191919;
+    text-shadow: 3.5px 4px 0px #ff8e7a, 7px 8px 0px #3f0900;
 }
 
 .dot-news {
     color: #191919;
-    font-size: 18px;
-    margin-left: 5px;
+    font-size: 20px;
+    margin-left: 7px;
+    letter-spacing: 1px;
 }
 
 blockquote {
     padding-bottom: 0.35rem;
-    border-left: 5px solid #ff7157 !important;
+    border-left: 5px solid #ff7f68 !important;
     color: gainsboro;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 blockquote > p {
@@ -258,9 +260,9 @@ blockquote > p {
 
 .nav-menu-tag-text {
     color: white;
+    font-size: 22px;
     font-variant: small-caps;
     margin-left: 1rem;
-    margin-top: 5px;
     height: 36px;
     letter-spacing: 1px;
     font-family: Octarine-Light;
@@ -292,8 +294,8 @@ blockquote > p {
 }
 
 .footer-social-icon {
-    width: 25px;
-    height: 25px;
+    width: 22px;
+    height: 22px;
     margin: 0;
     cursor: pointer;
 }
@@ -363,11 +365,11 @@ blockquote > p {
     margin-bottom: 1.75rem;
     padding: 1rem;
     font-family: Octarine-Light;
-    border-left: 5px solid #ff7157;
+    border-left: 5px solid #ff7f68;
     background-color: whitesmoke;
-    border-radius: 4px;
-    border-right: 2px solid #dcdcdc;
-    border-bottom: 1px solid #dcdcdc;
+    border-radius: 5px;
+    border-right: 1px solid #dcdcdc;
+    border-bottom: 2px solid #dcdcdc;
 }
 
 .blog-post-divider {
@@ -412,12 +414,12 @@ blockquote > p {
     font-size: 12px;
     font-weight: 700;
     color: #7a7a7a;
-    background-color: #fafafa;
+    background-color: #fdfdfd;
     letter-spacing: 1px;
     margin: 0 0 0 0.5rem;
     padding: 3px 8px 0 4px;
     border: 1px solid #ababab;
-    border-right-width: 3px;
+    border-bottom-width: 2px;
     border-radius: 5px;
 }
 
@@ -443,6 +445,7 @@ blockquote > p {
 
 .h2-post-title-wrapper {
     margin: 0;
+    line-height: 1.75rem;
 }
 
 .h2-post-title {
@@ -513,13 +516,12 @@ blockquote > p {
     color: #626262;
     margin: 0.75rem 0 1rem 0;
     padding: 0.2rem 0.5rem 0.1rem 0.5rem;
-    border-left: 5px solid #ff7157;
+    border-left: 5px solid #ff7f68;
     background-color: whitesmoke;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: Octarine-Light;
-    border-radius: 4px;
-    border-right: 2px solid #dcdcdc;
+    border-radius: 5px;
     border-bottom: 1px solid #dcdcdc;
 }
 
@@ -534,10 +536,9 @@ blockquote > p {
     height: max-content;
     margin: 0 0.5rem 0.5rem 0;
     padding: 0.2rem 0.5rem 0.1rem 0.5rem;
-    border-radius: 4px;
-    /* border-right: 2px solid #dcdcdc; */
+    border-radius: 5px;
     border-bottom: 1px solid #dcdcdc;
-    border-right: 5px solid #ff7157;
+    border-right: 5px solid #ff7f68;
     background-color: whitesmoke;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -550,7 +551,7 @@ blockquote > p {
     justify-content: center;
     margin: 0 auto 1.5rem auto;
     padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-    border-radius: 4px;
+    border-radius: 5px;
     width: max-content;
     text-transform: uppercase;
     font-size: 13px;
@@ -605,8 +606,7 @@ blockquote > p {
     font-size: 14px;
     letter-spacing: 1px;
     color: #191919;
-    border-radius: 4px;
-    border-right: 2px solid #dcdcdc;
+    border-radius: 5px;
     border-bottom: 1px solid #dcdcdc;
     font-family: Octarine-Light;
 }
@@ -642,8 +642,7 @@ blockquote > p {
     border-left: 5px solid #ff7f68;
     height: max-content;
     padding: 0.35rem 0.7rem 0.25rem 0.7rem;
-    border-radius: 4px;
-    border-right: 2px solid #dcdcdc;
+    border-radius: 5px;
     border-bottom: 1px solid #dcdcdc;
 }
 
@@ -671,7 +670,7 @@ blockquote > p {
     margin: 0;
     padding: 0.5rem 2rem 0.2rem 2rem;
     color: #626262;
-    font-size: 18px;
+    font-size: 16px;
     align-self: center;
     text-transform: uppercase;
     letter-spacing: 1px;
