--- a/src/styles.css
+++ b/src/styles.css
@@ -189,6 +189,7 @@ hr {
     align-items: center;
     min-width: 350px;
     background-color: #ff7157;
+    padding-top: 2px;
 }
 
 .nav-logo-text {
@@ -199,7 +200,7 @@ hr {
 }
 
 .before-dot-news {
-    text-shadow: 5px 0px 0px #ff9e8c;
+    text-shadow: 5px 0px 0.5px #ff9e8c;
 }
 
 .dot-news {
@@ -259,9 +260,10 @@ blockquote > p {
 
 .nav-menu-tag-text {
     color: white;
-    font-size: 22px;
+    font-size: 20px;
     font-variant: small-caps;
     margin-left: 1rem;
+    padding-top: 2px;
     height: 36px;
     letter-spacing: 1px;
     font-family: Octarine-Light;
