--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ hr {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
     .blog-post {
         margin: 1.5rem 0 !important;
     }
@@ -82,6 +82,11 @@ hr {
 
     .blog-post-date {
         font-size: 14px !important;
+        width: max-content !important;
+    }
+
+    .blog-post-tag-icons {
+        display: none !important;
     }
 
     .blog-post-body {
@@ -391,8 +396,8 @@ blockquote > p {
 }
 
 .blog-post-tag-icon {
-    width: 16px;
-    height: 16px;
+    width: 15px;
+    height: 15px;
     margin: 0 18px 1px 0;
 }
 
