--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@
     src: url(../static/Octarine-LightOblique.otf);
 }
 
+@font-face {
+    font-family: Mercury;
+    src: url(../static/Mercury.otf);
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: Octarine-Bold !important;
     color: #2f2f2f;
@@ -39,7 +44,7 @@ hr {
     }
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1150px) {
     .nav-menu-tag-text {
         display: none;
     }
@@ -162,9 +167,9 @@ hr {
         align-items: flex-start !important;
     }
 
-    .blog-post-social-button-text {
+    /* .blog-post-social-button-text {
         margin: 0 0 2px 0 !important;
-    }
+    } */
 }
 
 .header {
@@ -445,10 +450,9 @@ blockquote > p {
 
 .blog-post-social-button {
     display: flex;
-    height: 30px;
+    height: 1.75rem;
     align-items: center;
     text-transform: uppercase;
-    font-size: 12px;
     color: #7a7a7a;
     background-color: #fdfdfd;
     letter-spacing: 1px;
@@ -460,9 +464,11 @@ blockquote > p {
 }
 
 .blog-post-social-button-text {
-    height: 0.85rem;
+    font-size: 14px;
     font-family: Octarine-Light;
-    font-weight: 900;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.25rem;
     /* padding-top: 1px; */
 }
 
@@ -563,8 +569,6 @@ blockquote > p {
 
 .index-post-date {
     font-size: 14px;
-    width: max-content;
-    height: max-content;
     color: #626262;
     margin-right: 1rem;
     padding: 0.15rem 0.5rem 0 0.5rem;
@@ -573,8 +577,10 @@ blockquote > p {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: Octarine-Light;
+    font-weight: bold;
     border-bottom: 1px solid #dcdcdc;
     border-radius: 1px;
+    line-height: 1.5rem;
 }
 
 .index-post-excerpt {
@@ -583,9 +589,9 @@ blockquote > p {
 }
 
 .index-read-more-button {
-    font-size: 13px;
+    font-size: 14px;
+    color: #ff8d78;
     width: max-content;
-    height: max-content;
     margin: 0 0.5rem 0.5rem 0;
     padding: 0.15rem 0.5rem 0 0.5rem;
     border-bottom: 1px solid #dcdcdc;
@@ -593,7 +599,9 @@ blockquote > p {
     background-color: whitesmoke;
     text-transform: uppercase;
     letter-spacing: 1px;
+    line-height: 1.5rem;
     font-family: Octarine-Light;
+    font-weight: bold;
     border-radius: 1px;
 }
 
@@ -602,7 +610,7 @@ blockquote > p {
     flex-flow: column nowrap;
     justify-content: center;
     margin: 0 auto 1.5rem auto;
-    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    padding: 0.3rem 0.5rem 0.3rem 0.5rem;
     width: max-content;
     text-transform: uppercase;
     font-size: 13px;
@@ -657,10 +665,12 @@ blockquote > p {
     text-transform: uppercase;
     font-size: 14px;
     letter-spacing: 1px;
-    color: #191919;
+    color: #626262;
     border-bottom: 1px solid #dcdcdc;
     border-radius: 1px;
+    font-weight: bold;
     font-family: Octarine-Light;
+    line-height: 1.5rem;
 }
 
 .tag-item:hover {
@@ -699,11 +709,13 @@ blockquote > p {
 }
 
 .prev-next-button-text {
-    color: #191919;
+    color: #626262;
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: Octarine-Light;
+    font-weight: bold;
+    line-height: 1.25rem;
 }
 
 .prev-next-button-text:hover {
