--- a/src/styles.css
+++ b/src/styles.css
@@ -23,8 +23,19 @@ h1, h2, h3, h4, h5, h6 {
     color: #2f2f2f;
 }
 
+p {
+    font-family: Octarine-Light;
+    color: #191919;
+    letter-spacing: 0.25px;
+}
+
 hr {
     margin-bottom: 2rem;
+}
+
+a {
+    color: tomato;
+    text-decoration: none;
 }
 
 .wrapper {
@@ -74,6 +85,10 @@ hr {
 }
 
 @media (max-width: 550px) {
+    p {
+        font-size: 17px !important;
+    }
+
     .blog-post {
         margin: 1.5rem 0 !important;
     }
@@ -128,7 +143,6 @@ hr {
     }
 
     .index-post-excerpt {
-        font-size: 16px !important;
         margin: 1.5rem !important;
     }
 
@@ -159,7 +173,7 @@ hr {
     }
 
     .blog-post-social-buttons-wrapper-no-mgn {
-        margin-left: 0 !important;
+        margin-left: 0.15rem !important;
     }
 
     .blog-post-date-social {
@@ -222,13 +236,17 @@ hr {
 }
 
 blockquote {
-    padding-bottom: 0.35rem;
+    font-style: italic;
+    padding: 0.5rem 1.25rem;
+    margin-left: 0;
     border-left: 5px solid #ff7f68 !important;
     color: gainsboro;
+    border-radius: 1px;
 }
 
 blockquote > p {
     color: #939393;
+    font-size: 1.15rem;
 }
 
 .nav-menu {
@@ -469,7 +487,7 @@ blockquote > p {
     font-weight: bold;
     text-align: center;
     line-height: 1.25rem;
-    /* padding-top: 1px; */
+    padding-top: 3px;
 }
 
 .blog-post-social-button:hover {
@@ -577,14 +595,13 @@ blockquote > p {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: Octarine-Light;
-    font-weight: bold;
     border-bottom: 1px solid #dcdcdc;
     border-radius: 1px;
     line-height: 1.5rem;
 }
 
 .index-post-excerpt {
-    margin: 1.5rem 0;
+    margin: 2rem 1rem;
     font-size: 18px;
 }
 
@@ -601,7 +618,6 @@ blockquote > p {
     letter-spacing: 1px;
     line-height: 1.5rem;
     font-family: Octarine-Light;
-    font-weight: bold;
     border-radius: 1px;
 }
 
@@ -668,7 +684,6 @@ blockquote > p {
     color: #626262;
     border-bottom: 1px solid #dcdcdc;
     border-radius: 1px;
-    font-weight: bold;
     font-family: Octarine-Light;
     line-height: 1.5rem;
 }
@@ -714,7 +729,6 @@ blockquote > p {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: Octarine-Light;
-    font-weight: bold;
     line-height: 1.25rem;
 }
 
@@ -756,6 +770,7 @@ blockquote > p {
     min-width: 71px !important;
     width: 100%;
     margin-bottom: 1rem;
+    font-family: Octarine-Light;
     border: 1px solid #ff7f68;
     border-radius: 5px;
     color: #ff7f68;
