--- a/src/styles.css
+++ b/src/styles.css
@@ -237,8 +237,8 @@ a {
 
 blockquote {
     font-style: italic;
-    padding: 0.5rem 1.25rem;
-    margin-left: 0;
+    padding: 0.5rem 1.25rem !important;
+    margin-left: 0 !important;
     border-left: 5px solid #ff7f68 !important;
     color: gainsboro;
     border-radius: 1px;
