--- a/src/styles.css
+++ b/src/styles.css
@@ -123,7 +123,7 @@ a {
         width: max-content !important;
     }
 
-    .blog-post-tag-icons {
+    .blog-post-tag-icons, .index-post-tag-icons {
         display: none !important;
     }
 
