--- a/src/styles.css
+++ b/src/styles.css
@@ -191,7 +191,7 @@ a {
         margin-left: 1.5rem !important;
     }
 
-    .blog-post-social-buttons-wrapper-no-mgn {
+    .blog-post-social-buttons-wrapper-no-margin {
         margin-left: 0.15rem !important;
     }
 
@@ -423,6 +423,7 @@ blockquote > p {
 .blog-post-header {
     margin-bottom: 1.75rem;
     padding: 1rem;
+    padding-bottom: 0.75rem;
     font-family: Octarine-Light;
     border-left: 5px solid #ff7f68;
     background-color: whitesmoke;
@@ -444,8 +445,8 @@ blockquote > p {
     align-items: center;
     height: max-content;
     margin-left: 0.25rem;
-    margin-top: 0.75rem;
-    margin-bottom: 0.35rem;
+    /* margin-top: 0.75rem; */
+    /* margin-bottom: 0.35rem; */
 }
 
 .index-post-tag-icons {
@@ -482,7 +483,7 @@ blockquote > p {
 
 .h1-post-title {
     font-weight: light;
-    margin: 0.25rem 0 0 0;
+    margin: 0.25rem 0 0.75rem 0;
 }
 
 .blog-post-date-social {
@@ -499,15 +500,15 @@ blockquote > p {
     font-weight: bold;
     color: #626262;
     letter-spacing: 1px;
-    margin: 0.6rem 1.5rem 0 0.15rem;
-    /* padding-top: 0.2rem; */
+    margin: 0 1.5rem 0 0.15rem;
+    padding-top: 0.25rem;
 }
 
 .blog-post-social-buttons-wrapper {
     display: flex;
     flex-flow: row wrap;
     margin-left: 0.15rem;
-    margin-top: 0.75rem;
+    /* margin-top: 0.75rem; */
     font-family: Octarine-Bold;
 }
 
@@ -634,7 +635,7 @@ blockquote > p {
     font-size: 13px;
     color: #626262;
     margin-right: 1rem;
-    padding: 0.15rem 0.5rem 0 0.5rem;
+    padding: 0.15rem 0.6rem 0 0.6rem;
     border-left: 5px solid #ff7f68;
     background-color: whitesmoke;
     text-transform: uppercase;
