tags and share buttons

--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -10,7 +10,7 @@ Taken from https://bulma.io/documentation/overview/customize/
 $navbar-background-color: #ff7f68;
 $navbar-item-color: white;
 
-$link: tomato;
+// $link: tomato;
 $link-hover: $grey;
 
 // Update blue
