--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -9,6 +9,8 @@ Taken from https://bulma.io/documentation/overview/customize/
 // 2. Set your own initial variables
 $navbar-background-color: #ff7f68;
 $navbar-item-color: white;
+$navbar-item-hover-color: white;
+$navbar-item-hover-background-color: #ff8d79;
 
 // $link: tomato;
 $link-hover: $grey;
