--- a/src/custom.scss
+++ b/src/custom.scss
@@ -11,7 +11,7 @@
 .navbar {
     margin-bottom: 2rem;
     .container {
-        max-width: 1000px;
+        max-width: 1050px;
     }
 }
 
@@ -20,7 +20,7 @@
         margin-bottom: 2rem;
     }
     .header-hr {
-        background-color: $navbar-background-color;
+        background-color: #ff8d79;
     }
     .subtitle {
         margin-bottom: 0 !important;
